--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,19 @@
 	</dependencies>
 
 	<build>
+		<finalName>newslocator</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>12</source>
+					<target>12</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
