--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<jackson.version>2.13.1</jackson.version>
 		<rome.version>2.1.0</rome.version>
     	<spring-cloud.version>2022.0.4</spring-cloud.version>
+		<apache.version>4.5.14</apache.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +60,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${apache.version}</version>
 		</dependency>
 	</dependencies>
 		
