--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<rome.version>2.1.0</rome.version>
     	<spring-cloud.version>2022.0.4</spring-cloud.version>
 		<apache.version>4.5.14</apache.version>
+		<azure-openai.version>1.0.0-beta.16</azure-openai.version>
 	</properties>
 
 	<dependencies>
@@ -65,6 +66,11 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${apache.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-ai-openai</artifactId>
+			<version>${azure-openai.version}</version>
 		</dependency>
 	</dependencies>
 		
